fixes to alignment.

--- a/src/scss/WorkCard.scss
+++ b/src/scss/WorkCard.scss
@@ -47,7 +47,7 @@
         border-radius: 15px;
         transition: 0.2s ease-in-out;
         color: #ffffff;
-
+        width: 50%;
         .work-card-content {
             display: flex;
             justify-content: space-between;
